Big refactor of rendezvous code. A lot clearer now, also allows for easy implementation of different rendezvous strategies. Untested and missing multi-point rendezvous strategies.

--- a/src/gui/RobotPanel.form
+++ b/src/gui/RobotPanel.form
@@ -358,7 +358,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/resources/skeletonOff.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Skeleton"/>
+            <Property name="toolTipText" type="java.lang.String" value="Show information on how the RV location was selected"/>
             <Property name="borderPainted" type="boolean" value="false"/>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
             <Property name="focusable" type="boolean" value="false"/>
