--- a/src/gui/MainGUI.form
+++ b/src/gui/MainGUI.form
@@ -491,10 +491,10 @@
     <Component class="javax.swing.JLabel" name="labelAvgCycle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Arial" size="11" style="0"/>
+          <Font name="Arial" size="10" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
-        <Property name="text" type="java.lang.String" value="Avg Cycle:"/>
+        <Property name="text" type="java.lang.String" value="Avg Cycle ms:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="labelAvgCycleUpdate">
