add occupancygrid saving, not finished

--- a/src/gui/MainGUI.form
+++ b/src/gui/MainGUI.form
@@ -108,7 +108,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="panelExploration" min="-2" max="-2" attributes="1"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="scrollPaneRobots" max="32767" attributes="1"/>
+                      <Component id="scrollPaneRobots" pref="282" max="32767" attributes="1"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="1">
                       <Component id="labelSpeed" min="-2" pref="44" max="-2" attributes="0"/>
@@ -136,7 +136,7 @@
                           <Group type="102" attributes="0">
                               <Component id="labelAvgCycle" min="-2" pref="70" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="labelAvgCycleUpdate" min="-2" pref="36" max="-2" attributes="1"/>
+                              <Component id="labelAvgCycleUpdate" min="-2" pref="44" max="-2" attributes="1"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
@@ -145,7 +145,7 @@
                       <Component id="toggleHierarchy" min="-2" pref="36" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="buttonData" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="46" pref="89" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
