--- a/src/gui/RobotPanel.form
+++ b/src/gui/RobotPanel.form
@@ -401,9 +401,8 @@
               <Font name="Arial" size="11" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/resources/rvpointOn.png"/>
+              <Image iconType="3" name="/resources/rvpointOff.png"/>
             </Property>
-            <Property name="selected" type="boolean" value="true"/>
             <Property name="toolTipText" type="java.lang.String" value="Rendezvous Points"/>
             <Property name="borderPainted" type="boolean" value="false"/>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
