eliminate some situations which can run into an exception based on koordinates outside the environment. Fixed errors in sensor-data handling, random steps and environment generation

--- a/src/gui/ExplorationDialog.form
+++ b/src/gui/ExplorationDialog.form
@@ -496,7 +496,7 @@
               <Font name="Arial" size="11" style="0"/>
             </Property>
             <Property name="mnemonic" type="int" value="51"/>
-            <Property name="text" type="java.lang.String" value="Utility based return with ratio:  (broken)"/>
+            <Property name="text" type="java.lang.String" value="Utility based return with ratio:"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
@@ -566,8 +566,6 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="radioRole" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="380" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -584,7 +582,7 @@
                       <Component id="checkboxRoleswitch" min="-2" max="-2" attributes="0"/>
                       <Component id="checkboxRoleswitchCriterion" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="12" pref="47" max="32767" attributes="0"/>
+                  <EmptySpace min="12" pref="60" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -593,10 +591,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="radioRole" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="radioRole" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="42" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -730,11 +725,6 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkboxRVThroughWallsActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel3">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Broken"/>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
