Relay-GUI-Improvements and Relays in Random

--- a/src/gui/ExplorationDialog.form
+++ b/src/gui/ExplorationDialog.form
@@ -969,6 +969,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Use ComStations"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxUseComStationsActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="comStationDropChanceField">
           <Properties>
